# farm-riders

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  ruff.toml  tox.ini
app/: __init__.py
app/clients/: __init__.py  base.py
app/enums/: rental.py  ride.py  user.py
app/libraries/: mail.py  mongo.py  socket.py  upload.py
app/middleware/: auth.py  exceptions.py  process.py
app/models/: order_truck.py  profile.py  rental.py  ride.py  user.py  vehicle.py
app/routers/: auth.py  farmers_and_agg.py  rentals.py  upload.py  user.py  vehicle.py
app/schema/: auth.py  order_truck.py  order_trucks.py  rentals.py  ride.py  token.py  user.py  vehicle.py
app/scripts/: rental_scripts.py  vehicle_scrpts.py
app/services/: auth.py  mail.py  rentals.py  token.py  upload.py  user.py  vehicle.py
app/settings/: __init__.py
app/temp/: websocket_templete.html
app/templates/: base.html  order_served.html
app/utils/: exceptions.py  generate_uuid.py  helper_functions.py  response.py  storage.py  tasks.py
